News
====

.. contents::

svn trunk
---------

* Added a parameter to ``htmlfill.render()``: ``prefix_error``.  If
  this parameter is true (the default) then errors automatically go
  before the input field; if false then they go after the input field.

* Remove deprecated modules: ``fields``, ``formgen``, ``htmlform``,
  ``sqlformgen``, and ``sqlschema``.

1.0.1
-----

* ``chained_validators`` were removed from Schema somehow; now
  replaced and working.

* Put in missing ``htmlfill.render(error_class=...)`` parameter (was
  documented and implemented, but ``render()`` did not pass it
  through).

1.0
---

* Added ``formencode.schema.SimpleFormValidator``, which wraps a
  simple function to make it a validator.

* Changed the use of ``chained_validators`` in Schemas, so that all
  chained validators get run even when there are previous errors (to
  detect all the errors).

* While something like ``Int.to_python()`` worked, other methods like 
  ``Int.message(...)`` didn't work.  Now it does.

* Added Italian, Finnish, and Norwegian translations.

0.9
---

Backward incompatible changes
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

* The notion of "empty" has changed to include empty lists,
  dictionaries, and tuples.  If you get one of these values passed
  into (or generated by) a validator with ``not_empty=True`` you can
  get exceptions where you didn't previously.

Enhancements
~~~~~~~~~~~~

* Added support for Paste's MultiDict dictionary as input to
  Schema.to_python, by converting it to a normal dict via MultiDict.mixed.
  Previously MultiDicts wouldn't work with CompoundValidators (like
  ForEach)

* Added encoding parameter to htmlfill, which will handle cases when mixed
  str and unicode objects are used (turning all str objects into unicode)

* Include ``formencode.validators.InternationalPhoneNumber`` from
  W-Mark Kubacki.

* ``validators.Int`` takes ``min`` and ``max`` options (from Felix
  Schwarz).

* You can control the missing message (which by default is just